<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <!--Registration Page Header-->
    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="42dp"
        android:text="@string/registration"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Field for First Name-->
    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/fnamehint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration" />

    <!--Field for Family Name-->
    <EditText
        android:id="@+id/familyname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/famnamehint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <!--Field for Date of Birth-->
    <EditText
        android:id="@+id/dateofbirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/dobhint"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/familyname" />

    <!--Field for Email-->
    <EditText
        android:id="@+id/emailreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateofbirth" />

    <!--Field for Password-->
    <EditText
        android:id="@+id/passwordreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailreg" />

    <!--Button to Validate and Confirm Registration-->
    <Button
        android:id="@+id/regbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="52dp"
        android:text="@string/complete_registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordreg" />

    <!--View to show error messages if applicable-->
    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="39dp"
        android:text="One or more fields is empty, please fill out all fields."
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regbutton" />

</android.support.constraint.ConstraintLayout>